--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -2,26 +2,29 @@
 <html lang="en">
   <head>
     <title>Lunch Checker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
+<body ng-app='LunchCheck'>
+   <div ng-controller='LunchCheckController' class="container">
+     <h1>Lunch Check</h1>
 
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control" ng-model='items'>
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="checkLunchItems()">Check If Too Much</button>
          </div>
          <div class="form-group message">
-           <!-- Your message can go here. -->
+           {{message}}
+        <!--  Total Numeric value of person's name is: {{totalValue}}-->
          </div>
    </div>
 
