--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -22,7 +22,7 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkLunchItems()">Check If Too Much</button>
          </div>
-         <div class="form-group message">
+         <div class="form-group message" ng-style="customStyle.style">
            {{message}}
         <!--  Total Numeric value of person's name is: {{totalValue}}-->
          </div>
